service: check write() return value to please compilers (bgo #743439)

See also:
https://gcc.gnu.org/bugzilla/show_bug.cgi?id=25509
https://gcc.gnu.org/bugzilla/show_bug.cgi?id=66425

https://bugzilla.gnome.org/show_bug.cgi?id=743439